--- a/CS2Internal/CS2Internal.csproj
+++ b/CS2Internal/CS2Internal.csproj
@@ -17,9 +17,9 @@
     </ItemGroup>
 
     <ItemGroup>
-
-      <PackageReference Include="ImGui.NET" Version="1.90.0.1" />
-
+        <Reference Include="ImGui.NET">
+            <HintPath>Assemblies\ImGui.NET.dll</HintPath>
+        </Reference>
     </ItemGroup>
 
 </Project>
